# mai-assistant

./: .gitignore  Ai assistant v1 spec.txt  README.md  start-app.sh
backend/: .env.example  pyproject.toml
backend/app/: config.py  main.py  runtime.py  schemas.py
backend/app/agent/: answer_engine.py  general_answerer.py  graph.py  prompts.py  tools.py
backend/app/llms/: base.py  ollama_provider.py  openai_provider.py  router.py
backend/app/rag/: __init__.py  chunking.py  chunks.py  embeddings.py  ingestion.py  loaders.py  rag_answer_tool.py  rag_answerer.py  retriever.py  vector_store.py
backend/tests/: test_agent_tool_selection.py  test_api_runtime.py  test_chunking.py  test_chunks.py  test_config.py  test_ingestion.py  test_llm_router.py  test_rag_answer_tool.py  test_retriever.py
evals/: promptfoo.yaml  test_cases.yaml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: ChatWindow.tsx  ProviderBadge.tsx  SourceList.tsx
