[project]
name = "personal-knowledge-agent-backend"
version = "0.1.0"
description = "Local-first personal knowledge agent backend"
readme = "../README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "chromadb>=0.5.5",
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "langchain>=0.3.0",
  "langchain-community>=0.3.0",
  "langchain-chroma>=0.1.4",
  "langchain-text-splitters>=0.3.0",
  "langgraph>=0.2.34",
  "onnxruntime>=1.16.3,<1.20.0",
  "openai>=1.46.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "pypdf>=4.3.1",
  "pytest>=8.3.2",
  "python-dotenv>=1.0.1",
  "sentence-transformers>=2.7.0,<3.0.0",
  "torch>=2.2.0,<2.3.0",
  "uvicorn>=0.30.6",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
